--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -1,7 +1,7 @@
 name: hello-world
-on: push
+'on': push
 jobs:
-  my-job: demo-job
+  my-job:
     runs-on: ubuntu-latest
     steps:
       - name: my-step
