--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -1,8 +1,19 @@
-name: hello-world
-'on': push
+name: sonar_cloud_scan_github_actions
+'on': workflow_dispatch
 jobs:
-  my-job:
+  DemoSoranCloudScan:
     runs-on: ubuntu-latest
     steps:
-      - name: my-step
+      - uses: actions/checkout@v3
+        with:
+          fetch_depth: 0
+      - name: SonarCloud Scan
+        uses: sonarsource/sonarcloud-guthub-action@master
+        env:
+          GITHUB_TOKEN: '${{secrets.GIT_TOKEN}}'
+          SONAR_TOKEN: '${{secrets.SONAR_TOKEN}}'
+        with:
+            args: >
+                -Dsonar.organization=crackinterviewer
+                -Dsonar.projectkey=crackinterviewer
         run: echo "Hello World! this"
