--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -1,14 +1,14 @@
 name: sonar_cloud_scan_github_actions
 'on': workflow_dispatch
 jobs:
-  DemoSoranCloudScan:
+  DemoSonarCloudScan:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
         with:
           fetch_depth: 0
       - name: SonarCloud Scan
-        uses: sonarsource/sonarcloud-guthub-action@master
+        uses: sonarsource/sonarcloud-github-action@master
         env:
           GITHUB_TOKEN: '${{secrets.GIT_TOKEN}}'
           SONAR_TOKEN: '${{secrets.SONAR_TOKEN}}'
